<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_main"
    >

    <FrameLayout
        android:id="@+id/fr_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_2"
            tools:ignore="ContentDescription"
            />

    </FrameLayout>
    <LinearLayout
        android:layout_below="@+id/fr_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/linear"
        android:orientation="vertical"
        android:windowSoftInputMode="adjustResize"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/title_welcome_back"
                android:textColor="@color/color_white"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_start_prompt"
                android:textColor="@color/color_light_grey"
                android:textSize="12sp"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="32dp"
                >
                <EditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/color_light_grey"
                    android:textSize="12sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                >
                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_password"
                    android:inputType="textPassword"
                    android:textColor="@color/color_light_grey"
                    android:textSize="12sp"
                    />
            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/cb_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_remember"/>
        </LinearLayout>
        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="8dp"
            android:background="@drawable/login_button_bg"
            android:gravity="center"
            android:text="@string/title_login"
            />
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pr_login"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RelativeLayout>