<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_main"
    >
    <FrameLayout
        android:id="@+id/fr_rule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar_rule"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_2"
            tools:ignore="ContentDescription"
            />

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fr_rule"
        android:layout_margin="8dp"
        android:background="@drawable/linear"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_prompt"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
            <TextView
                android:textStyle="italic"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule"/>
            <TextView
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_answer"
                />
            <TextView
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/point_set"
                />
        </LinearLayout>
        <Button
            android:id="@+id/bt_begin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="8dp"
            android:background="@drawable/login_button_bg"
            android:gravity="center"
            android:text="@string/title_begin"
            />
    </LinearLayout>
</RelativeLayout>