<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    >
    <FrameLayout
        android:id="@+id/fr_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            />

        <TextView
            android:id="@+id/toolbar_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_register"
            android:textColor="@color/color_white"
            android:textSize="22sp"
            app:fontFamily="@font/alegreya_sans_bold"
            />

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fr_register"
        android:layout_margin="16sp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_2"
            android:tint="@color/color_white"
            tools:ignore="ContentDescription"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/color_hint"
            >
            <EditText
                android:id="@+id/et_res_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_hint"
                android:hint="@string/title_user_name"
                android:inputType="text"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_hint"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/color_hint"
            >
            <EditText
                android:id="@+id/et_res_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_hint"
                android:hint="@string/title_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_hint"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/color_hint"
            >
            <EditText
                android:id="@+id/et_res_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_hint"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_hint"
                />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/title_gender"
                android:textColor="@color/color_white"
                android:textSize="18sp"
                />
            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:buttonTint="@color/color_white"
                android:text="@string/text_male"
                android:textColor="@color/color_white"
                />
            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:buttonTint="@color/color_white"
                android:text="@string/title_female"
                android:textColor="@color/color_white"
                />
        </RadioGroup>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shapesignup"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/title_register"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pr_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>