<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_quiz"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@mipmap/back"
        android:theme="@style/ToolbarTheme"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_quiz"
            android:textColor="@color/color_white"
            android:textSize="22sp"
            app:fontFamily="@font/alegreya_sans_bold"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_quiz"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <ProgressBar
            android:id="@+id/pr_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="60"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            />
        <thm.com.gr2.widget.NonSwipeableViewPager
            android:id="@+id/vp_quiz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical"
            >
            <android.support.v7.widget.CardView
                android:id="@+id/cv_zero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:stateListAnimator="@animator/lift_on_touch"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_zero"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/prompt_answer_0"
                        android:textColor="@color/color_black"
                        android:textSize="18sp"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:stateListAnimator="@animator/lift_on_touch"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_one"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/prompt_answer_1"
                        android:textColor="@color/color_black"
                        android:textSize="18sp"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:stateListAnimator="@animator/lift_on_touch"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_two"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/prompt_answer_2"
                        android:textColor="@color/color_black"
                        android:textSize="18sp"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:stateListAnimator="@animator/lift_on_touch"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_three"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/prompt_answer_3"
                        android:textColor="@color/color_black"
                        android:textSize="18sp"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:stateListAnimator="@animator/lift_on_touch"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_four"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/prompt_answer_4"
                        android:textColor="@color/color_black"
                        android:textSize="18sp"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pr_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
</RelativeLayout>